Actually use a linear buffer format for multi-GPU

BUG: 431968